--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,8 +15,8 @@
 		    </div>
 
 		    <div class="form-group">
-		        <label for="amount">Amount</label>
-		        <input type="text" class="form-control" id="amount" name="amount" autocomplete="false" placeholder="Enter amount" />
+		        <label for="amount">Amounto</label>
+		        <input type="number" class="form-control" id="amount" name="amount" autocomplete="false" placeholder="Enter amount" />
 		    </div>
 
 		    <div class="form-group">
