--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,7 @@
 		    </div>
 
 		    <div class="form-group">
-		        <label for="amount">Amounto</label>
+		        <label for="amount">Amountone</label>
 		        <input type="number" class="form-control" id="amount" name="amount" autocomplete="false" placeholder="Enter amount" />
 		    </div>
 
