--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,36 +20,38 @@
 		    </div>
 
 			    <div class="row">
-				  <button type="button" class="col-sm-4 btn btn-secondary keyboard-button" data-content="1">1</button>
-				  <button type="button" class="col-sm-4 btn btn-secondary keyboard-button" data-content="2">2</button>
-				  <button type="button" class="col-sm-4 btn btn-secondary keyboard-button" data-content="3">3</button>
+				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="1">1</button>
+				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="2">2</button>
+				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="3">3</button>
 			  	</div>
 			    <div class="row">
-				  <button type="button" class="col-sm-4 btn btn-secondary keyboard-button" data-content="4">4</button>
-				  <button type="button" class="col-sm-4 btn btn-secondary keyboard-button" data-content="5">5</button>
-				  <button type="button" class="col-sm-4 btn btn-secondary keyboard-button" data-content="6">6</button>
+				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="4">4</button>
+				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="5">5</button>
+				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="6">6</button>
 			  	</div>
 			    <div class="row">
-				  <button type="button" class="col-sm-4 btn btn-secondary keyboard-button" data-content="7">7</button>
-				  <button type="button" class="col-sm-4 btn btn-secondary keyboard-button" data-content="8">8</button>
-				  <button type="button" class="col-sm-4 btn btn-secondary keyboard-button" data-content="9">9</button>
+				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="7">7</button>
+				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="8">8</button>
+				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="9">9</button>
 			  	</div>
 
 			    <div class="row">
-				  <button type="button" class="col-sm-4 btn btn-secondary plus-minus-button" data-content="+">+</button>
-				  <button type="button" class="col-sm-4 btn btn-secondary keyboard-button" data-content=",">,</button>
-				  <button type="button" class="col-sm-4 btn btn-secondary plus-minus-button" data-content="-">-</button>
+				  <button type="button" class="col-4 btn btn-secondary plus-minus-button">+/-</button>
+				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="0">0</button>
+				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content=",">,</button>
 			  	</div>
+
+
+
+		    <div class="form-group">
+		        <label for="amount">Notes</label>
+		        <textarea type="number" class="form-control" id="notes" name="notes" autocomplete="false" placeholder="Any notes?"></textarea>
+		    </div>
 
 		    <div class="form-group">
 		        <div class="btn-group-vertical w-100" id="cash-flow-types"></div>
 		    </div>
 
-
-		    <div class="form-group">
-		        <label for="amount">Notes</label>
-		        <textarea type="number" class="form-control" id="notes" name="notes" autocomplete="false" placeholder="Enter amount"></textarea>
-		    </div>
 
 		    <input type="hidden" name="cashFlowTypeId" />
 
@@ -110,12 +112,14 @@
             var target = e.target;
             var content = target.dataset.content;
             var amount = $("#amount").val() || "";
-            if(amount.charAt(0) == "+" || amount.charAt(0) == "-") {
-            	amount = amount.substring(1, amount.amount);
+            var newAmount = "";
+            if(amount.charAt(0) == "+") {
+            	newAmount = "-" + amount.substring(1, amount.amount);
+            } else if(amount.charAt(0) == "-") {
+            	newAmount = "+" + amount.substring(1, amount.amount);
+            } else {
+				newAmount = "+" + amount.toString();
             }
-
-            var newAmount = content + amount.toString();
-            $("#amount").val(newAmount);
             $("#amount").val(newAmount);
         };
 
