--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,30 +1,21 @@
-    <nav class="navbar navbar-expand navbar-dark bg-primary fixed-bottom">
-        <div class="navbar-collapse collapse">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active text-center" href="#">
-                        <!--<span class="d-block">
-                            <i class="fas fa-hand-holding-usd fa-2x"></i>
-                        </span>-->
-                        <span class="d-block">Add</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-center" href="#">
-                        <!--<span class="d-block">
-                            <i class="fas fa-chart-pie fa-2x"></i>
-                        </span>-->
-                        <span class="d-block">Graphs</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-center" href="#">
-                        <!--<span class="d-block">
-                            <i class="fas fa-cogs fa-2x"></i>
-                        </span>-->
-                        <span class="d-block">Settings</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+  <header class="bmd-layout-header">
+    <div class="navbar navbar-dark bg-primary">
+      <button class="navbar-toggler" type="button" data-toggle="drawer" data-target="#dw-s2">
+        <span class="sr-only">Toggle drawer</span>
+        <i class="material-icons">menu</i>
+      </button>
+      <ul class="nav navbar-nav">
+        <li class="nav-item"></li>
+      </ul>
+    </div>
+  </header>
+  <div id="dw-s2" class="bmd-layout-drawer bg-faded">
+    <header>
+      <a class="navbar-brand"></a>
+    </header>
+    <ul class="list-group">
+      <a class="list-group-item">Link 1</a>
+      <a class="list-group-item">Link 2</a>
+      <a class="list-group-item">Link 3</a>
+    </ul>
+  </div>
