--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,11 @@
 
 <body>
 
+
+<div class="bmd-layout-container bmd-drawer-f-l bmd-drawer-overlay">
   <% include ../partials/nav.ejs %>
+  <main class="bmd-layout-content">
+
     <div class="container">
 		<form id="cash-flow-form">
 		    <div class="form-group">
@@ -57,6 +61,10 @@
 
 		</form>
     </div>
+
+  </main>
+</div>
+
 
   <% include ../partials/scripts.ejs %>
       <script>
