--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,6 +2,14 @@
 <html>
 <head>
   <% include ../partials/header.ejs %>
+  <style type="text/css">
+  .keyboard-button{
+  	font-size: 1.3rem!important;
+  }
+  .plus-minus-button{
+  	font-size: 1.3rem!important;
+  }
+  </style>
 </head>
 
 <body>
@@ -24,9 +32,9 @@
 		    </div>
 
 			    <div class="row">
-				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="1">1</button>
-				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="2">2</button>
-				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="3">3</button>
+				  <button type="button" class="col-4 btn btn-secondary keyboard-button display-4" data-content="1">1</button>
+				  <button type="button" class="col-4 btn btn-secondary keyboard-button display-4" data-content="2">2</button>
+				  <button type="button" class="col-4 btn btn-secondary keyboard-button display-4" data-content="3">3</button>
 			  	</div>
 			    <div class="row">
 				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="4">4</button>
