--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,5 @@
   <header class="bmd-layout-header">
-    <div class="navbar navbar-dark bg-primary">
+    <div class="navbar navbar-dark bg-primary fixed-top">
       <button class="navbar-toggler" type="button" data-toggle="drawer" data-target="#dw-s2">
         <span class="sr-only">Toggle drawer</span>
         <i class="material-icons">menu</i>
