--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,8 +14,7 @@
       <a class="navbar-brand"></a>
     </header>
     <ul class="list-group">
-      <a class="list-group-item">Link 1</a>
-      <a class="list-group-item">Link 2</a>
-      <a class="list-group-item">Link 3</a>
+      <a href="/" class="list-group-item">Add Cash Flow</a>
+      <a href="/cashflow" target="_blank" class="list-group-item">Cash Flow List</a>
     </ul>
   </div>
