--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -15,6 +15,6 @@
     </header>
     <ul class="list-group">
       <a href="/" class="list-group-item">Add Cash Flow</a>
-      <a href="/cashflow" target="_blank" class="list-group-item">Cash Flow List</a>
+      <a href="/cashflowlist" target="_blank" class="list-group-item">Cash Flow List</a>
     </ul>
   </div>
