--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,26 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
     <link rel="manifest" href="manifest.json">
+    <style type="text/css">
+      .app-content{
+        padding-top: 53px;
+        height: 100%;
+      }
+
+        .info-container{
+            margin-right: 20px;
+          }
+
+          #cash-flow-list{
+            margin-top: 20px;
+          }
+  .keyboard-button{
+    font-size: 1.3rem!important;
+  }
+  .plus-minus-button{
+    font-size: 1.3rem!important;
+  }
+    </style>
     <meta name="theme-color" content="#009688">
 
     <title>EXM</title>
