--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,19 +2,6 @@
 <html>
 <head>
   <% include ../partials/header.ejs %>
-  <style type="text/css">
-  .keyboard-button{
-  	font-size: 1.3rem!important;
-  }
-  .plus-minus-button{
-  	font-size: 1.3rem!important;
-  }
-
-  .app-content{
-  	padding-top: 53px;
-  	height: 100%;
-  }
-  </style>
 </head>
 
 <body>
@@ -25,179 +12,47 @@
   <main class="bmd-layout-content">
 
     <div class="container app-content">
-		<form id="cash-flow-form">
-		    <div class="form-group">
-		        <label for="date">Date</label>
-		        <input type="text" class="form-control" id="date" name="date" autocomplete="false" placeholder="Enter date" />
-		    </div>
+      <div id="insert-cash-flow">
+		    <% include ../partials/InsertCashFlow/template.ejs %>
+      </div>
 
-		    <div class="form-group">
-		        <label for="amount">Amount</label>
-		        <input type="text" class="form-control" id="amount" name="amount" autocomplete="false" placeholder="Enter amount" />
-		    </div>
-
-			    <div class="row">
-				  <button type="button" class="col-4 btn btn-secondary keyboard-button display-4" data-content="1">1</button>
-				  <button type="button" class="col-4 btn btn-secondary keyboard-button display-4" data-content="2">2</button>
-				  <button type="button" class="col-4 btn btn-secondary keyboard-button display-4" data-content="3">3</button>
-			  	</div>
-			    <div class="row">
-				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="4">4</button>
-				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="5">5</button>
-				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="6">6</button>
-			  	</div>
-			    <div class="row">
-				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="7">7</button>
-				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="8">8</button>
-				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="9">9</button>
-			  	</div>
-
-			    <div class="row">
-				  <button type="button" class="col-4 btn btn-primary plus-minus-button">+/-</button>
-				  <button type="button" class="col-4 btn btn-secondary keyboard-button" data-content="0">0</button>
-				  <button type="button" class="col-4 btn btn-primary keyboard-button" data-content=".">.</button>
-			  	</div>
-
-
-
-		    <div class="form-group">
-		        <label for="amount">Notes</label>
-		        <textarea type="number" class="form-control" id="notes" name="notes" autocomplete="false" placeholder="Any notes?"></textarea>
-		    </div>
-
-		    <div class="form-group">
-		        <div class="btn-group-vertical w-100" id="cash-flow-types"></div>
-		    </div>
-
-
-		    <input type="hidden" name="cashFlowTypeId" />
-
-		</form>
+      <div id="cash-flow-list">
+        <% include ../partials/CashFlowList/template.ejs %>
+      </div>
     </div>
 
   </main>
 </div>
 
 
-  	  <% include ../partials/scripts.ejs %>
-      <script>
-      	var initializeComponents = function () {
-	        $("#amount").focus();
-	        var now = moment().format('DD/MM/YYYY hh:mm');
-	        $("#date").val(now);
-		};
-		var initializeCashFlowTypes = function () {
-			$.ajax({
-				method: "GET",
-				url: "/cashflowtypes",
-			}).done(function(cashFlowTypes) {
-		        var renderCashFlowTypes = function (cashFlows) {
-		            $container = $("#cash-flow-types");
-		            $container.html("");
+<% include ../partials/scripts.ejs %>
+<% include ../partials/InsertCashFlow/scripts.ejs %>
+<% include ../partials/CashFlowList/scripts.ejs %>
+<script>
+  var goToInsertCashFlow = function() {
+      console.log('Navigation: InsertCashFlow');
 
-		            _(cashFlowTypes).forEach(function (cashFlowType) {
-		                var output = Mustache.render("<button type='button' data-type-id={{id}} class='cash-flow-button btn-lg rounded-0 btn btn-outline-{{colorCode}}'>{{name}}</button>", cashFlowType);
-		                $container.append(output);
-		            });
-		    	};
-		    	renderCashFlowTypes(cashFlowTypes);
-			});
-		};
-		var initializeEvents = function (keySelector, eventModels) {     
-	        var $view = $(keySelector);
-	        _(eventModels).forEach(function (eventModel) {
-	            $view.on(eventModel.event, eventModel.target, eventModel.callback);
-	        });
-		};
+      $("#cash-flow-list").hide();
+      $("#insert-cash-flow").show();
+      renderInsertCashFlowForm();
+  };
 
-		initializeComponents();
-		initializeCashFlowTypes();
-		initializeEvents("#cash-flow-form",  [
-	        	{
-	        		event: "click",
-	        		target: ".cash-flow-button", 
-	        		callback: function (e) {
-			            var target = e.target;
-			            var cashFlowTypeId = target.dataset.typeId;
-			            var amount = $("#amount").val();
-			            var date = $("#date").val();
-			            var notes = $("#notes").val();
+  var goToCashFlowLIst = function() {
+      console.log('Navigation: CashFlowList');
 
-			            var data = {
-			                cashFlowTypeId: cashFlowTypeId,
-			                amount: amount,
-			                date: date,
-			                notes: notes
-			            };
+      $("#insert-cash-flow").hide();
+      $("#cash-flow-list").show();
+      renderCashFlowList();
+  };
 
-			            if(!data.amount) {
-			            	$.snackbar({
-									content: "<div class='text-center'><span>Invalid amount! </span><i class='text-success align-middle fas fas fa-coins fa-2x'></i></div>",
-									htmlAllowed: true
-							});	
-			            	return;
-			            }
+  Router.navigate();
+  Router
+  .add("/", goToInsertCashFlow)
+  .add(/InsertCashFlow/, goToInsertCashFlow)
+  .add(/CashFlowList/, goToCashFlowLIst)
+  .listen();
 
-						$.ajax({
-							method: "PUT",
-							url: "/cashflow",
-						    dataType : "json",
-						    contentType: "application/json; charset=utf-8",
-    						data: JSON.stringify(data)
-						}).done(function(result) {
-							if(result.isSuccessfull) {
-								$.snackbar({
-									content: "<div class='text-center'><span>Cash flow created! </span><i class='text-success align-middle far fa-smile fa-2x'></i></div>",
-									htmlAllowed: true
-								});	
-								$("#amount").val("");
-					            $("#notes").val("");
-					            $("html, body").animate({ scrollTop: 0 }, "slow");
-							} else {
-								$.snackbar({
-									content: "<div class='text-center'><span>Smothing went wrong... </span><i class='text-warning align-middle far fa-frown fa-2x'></i></div>",
-									htmlAllowed: true
-								});
-							}
-						}).fail(function () {
-								$.snackbar({
-									content: "<div class='text-center'><span>Smothing went wrong... </span><i class='text-warning align-middle far fa-frown fa-2x'></i></div>",
-									htmlAllowed: true
-								});	
-						});
-			        } 
-	        	},
-	        	{ 	
-	        		event: "click", 
-	        		target: ".keyboard-button", 
-	        		callback: function (e) {
-			            var target = e.target;
-			            var content = target.dataset.content;
-			            var amount = $("#amount").val() || "";
-			            var newAmount = amount.toString() + content;
-			            $("#amount").val(newAmount);
-			        } 
-	        	},
-	        	{ 	
-	        		event: "click",
-	        		target: ".plus-minus-button", 
-	        		callback: function (e) {
-			            var target = e.target;
-			            var content = target.dataset.content;
-			            var amount = $("#amount").val() || "";
-			            var newAmount = "";
-			            if(amount.charAt(0) == "+") {
-			            	newAmount = "-" + amount.substring(1, amount.amount);
-			            } else if(amount.charAt(0) == "-") {
-			            	newAmount = "+" + amount.substring(1, amount.amount);
-			            } else {
-							newAmount = "+" + amount.toString();
-			            }
-			            $("#amount").val(newAmount);
-			        }
-	        	}
-	        ]);
-    </script>
-
+  Router.navigate("/InsertCashFlow/");
+</script>
 </body>
 </html>
