--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,7 +14,7 @@
       <a class="navbar-brand"></a>
     </header>
     <ul class="list-group">
-      <a href="/" class="list-group-item">Add Cash Flow</a>
-      <a href="/cashflowlist" target="_blank" class="list-group-item">Cash Flow List</a>
+      <a href="#/InsertCashFlow" class="list-group-item navbar-toggler" data-toggle="drawer" data-target="#dw-s2">Add Cash Flow</a>
+      <a href="#/CashFlowList" class="list-group-item navbar-toggler" data-toggle="drawer" data-target="#dw-s2">Cash Flow List</a>
     </ul>
   </div>
