--- a/views/partials/cashflowlist_template.ejs
+++ b/views/partials/cashflowlist_template.ejs
@@ -1,3 +1,30 @@
 <div class="container app-content">
-  <div id="cash-flow-list"></div>
+	<div class="row">
+	  <div class="form-group w-100 col">
+	    <label for="month">Month</label>
+		<select name="month" id="month" class="form-control" >
+			<option value="1">Gennaio</option>
+			<option value="2">Fabbrario</option>
+			<option value="3">Marzo</option>
+			<option value="4">Aprile</option>
+			<option value="5">Maggio</option>
+			<option value="6">Giugno</option>
+			<option value="7">Luglio</option>
+			<option value="8">Agosto</option>
+			<option value="9">Settembre</option>
+			<option value="10">Ottobre</option>
+			<option value="11">Novembre</option>
+			<option value="12">Dicembre</option>
+		</select>
+	  </div>
+	  <div class="form-group w-100 col">
+	    <label for="year">Year</label>
+		<select name="year" id="year" class="form-control" >
+			<option value="2018">2018</option>
+			<option value="2019">2019</option>
+			<option value="2020">2020</option>
+		</select>
+	  </div>
+	</div>
+  <div class="cash-flow-list-container"></div>
 </div> 
