--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -16,5 +16,6 @@
     <ul class="list-group">
       <a href="#/InsertCashFlow" class="list-group-item navbar-toggler" data-toggle="drawer" data-target="#dw-s2">Add Cash Flow</a>
       <a href="#/CashFlowList" class="list-group-item navbar-toggler" data-toggle="drawer" data-target="#dw-s2">Cash Flow List</a>
+      <a href="#/CashFlowSumList" class="list-group-item navbar-toggler" data-toggle="drawer" data-target="#dw-s2">Cash Flow Sum</a>
     </ul>
   </div>
