--- a/views/partials/cashflowlist_scripts.ejs
+++ b/views/partials/cashflowlist_scripts.ejs
@@ -43,7 +43,7 @@
 			        var output = Mustache.render(template, {
 			        	CashFlowType: "Total",
 			        	Color: "success",
-			        	Amount: total.toFixed(2);,
+			        	Amount: total.toFixed(2),
 			        	Date: options.month + "/" + options.year
 			        });
 			        $htmlcontainer = $container.find(".cash-flow-list-container");
