--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -9,6 +9,8 @@
 
 <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
 
+ <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
 <script>$(document).ready(function () { $('body').bootstrapMaterialDesign(); });</script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
