--- a/views/partials/pie_scripts.ejs
+++ b/views/partials/pie_scripts.ejs
@@ -32,7 +32,7 @@ var createPieSection = function(op){
 		        var data = [{
 				  values: values,
 				  labels: labels,
-				  type: 'pie'
+				  type: 'scatterpolar'
 				}];
 
 				var layout = {
@@ -48,8 +48,12 @@ var createPieSection = function(op){
 						orientation: "h"
   					}
 				};
+
+				var options = {
+					displayModeBar: false
+				};
 				$container.find("#pie-container").html("");
-				Plotly.newPlot('pie-container', data, layout);
+				Plotly.newPlot('pie-container', data, layout, options);
 			}); 
 		};
 
