--- a/views/partials/pie_scripts.ejs
+++ b/views/partials/pie_scripts.ejs
@@ -32,7 +32,7 @@ var createPieSection = function(op){
 		        var data = [{
 				  values: values,
 				  labels: labels,
-				  type: 'scatterpolar'
+				  type: 'pie'
 				}];
 
 				var layout = {
