--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -18,5 +18,6 @@
       <a href="#/CashFlowList" class="list-group-item navbar-toggler" data-toggle="drawer" data-target="#dw-s2">Cash Flow List</a>
       <a href="#/CashFlowSumList" class="list-group-item navbar-toggler" data-toggle="drawer" data-target="#dw-s2">Cash Flow Sum</a>
       <a href="#/PieChart" class="list-group-item navbar-toggler" data-toggle="drawer" data-target="#dw-s2">Pie Chart</a>
+      <a href="#/History" class="list-group-item navbar-toggler" data-toggle="drawer" data-target="#dw-s2">History</a>
     </ul>
   </div>
