--- a/views/partials/pie_template.ejs
+++ b/views/partials/pie_template.ejs
@@ -1,7 +1,7 @@
 <div class="container app-content">
 	<div class="row">
 	  <div class="form-group w-100 col">
-	    <label for="month">Month</label>
+	    <label for="month">Mese</label>
 		<select name="month" id="month" class="form-control" >
 			<option value="1">Gennaio</option>
 			<option value="2">Fabbrario</option>
@@ -18,7 +18,7 @@
 		</select>
 	  </div>
 	  <div class="form-group w-100 col">
-	    <label for="year">Year</label>
+	    <label for="year">Anno</label>
 		<select name="year" id="year" class="form-control" >
 			<option value="2018">2018</option>
 			<option value="2019">2019</option>
