--- a/views/partials/history_scripts.ejs
+++ b/views/partials/history_scripts.ejs
@@ -35,7 +35,6 @@ var createHistorySection = function(op){
 		        }
 
 				var layout = {
-					height: 900,
 		  			margin: {
 		   		 		l: 0,
 		   		 		r: 0,
@@ -47,7 +46,8 @@ var createHistorySection = function(op){
 					paper_bgcolor: "#fafafa",
 					plot_bgcolor: "#fafafa",
 					legend: {
-						orientation: "h"
+						orientation: "h",
+						y: -10
   					}
 				};
 
